# testrunner

./: .gitignore  BUILDING.md  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  update.sh
docs/: testrunner-config.adoc  testrunner.1  testrunner.adoc
src/: main.rs  testrunner.rs  unit_test.rs
src/project/: binary.rs  definition.rs  mod.rs
src/test/: diff.rs  io_test.rs  mod.rs  ordio_test.rs  test.rs
src/testresult/: io_testresult.rs  mod.rs  ordio_testresult.rs  testresult.rs
src/tests/: diff.rs  generator.rs  io_test.rs  mod.rs  ordio_test.rs  test.rs  testcase.rs  testresult.rs  unit_test.rs
templates/: testreport.stpl  testreport_testcase_io.stpl  testreport_testcase_ordio.stpl
templates/back/: testreport.stpl  testreport_testcase_io.stpl  testreport_testcase_ordio.stpl
