[package]
name = "testrunner"
version = "2.0.0-alpha.10"
authors = ["Thomas Brunner <t.brunner@student.tugraz.at>", "Florian Hager <florian.hager@student.tugraz.at>", "Mathias Kahr <m.kahr@student.tugraz.at>", "Kilian Payer <kilian.payer@student.tugraz.at>", "Julia Herbsthofer <julia.herbsthofer@student.tugraz.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
clap = "2.33.0"
colored = "2.0"
erased-serde = "0.3"
lazy_static = "1.4"
regex = "1.3.6"
sailfish = { git = "https://github.com/Svenskunganka/sailfish", branch="self_in_templates" }
# sailfish = { version = "0.5", path = "/tmp/sailfish/sailfish" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_tagged = "0.2.0"
similar = { version = "2.2", features = ["inline", "unicode"] }
subprocess = "0.2.6"
thiserror = "1"
toml = "0.5.9"
uuid = { version = "0.8", features = ["v4"] }

